--- a/NuGet.config
+++ b/NuGet.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear/>
+    <clear />
     <add key="dotnetfeed dotnet-core" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
     <add key="dotnetfeed dotnet-coreclr" value="https://dotnetfeed.blob.core.windows.net/dotnet-coreclr/index.json" />
     <add key="myget.org dotnet-buildtools" value="https://dotnet.myget.org/F/dotnet-buildtools/api/v3/index.json" />
@@ -9,6 +9,7 @@
     <add key="myget.org dotnet-corefxlab" value="https://dotnet.myget.org/F/dotnet-corefxlab/api/v3/index.json" />
     <add key="myget.org system-commandline" value="https://dotnet.myget.org/F/system-commandline/api/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="llvm source" value="D:\GitHub\LLVMSharp\src\bin\Release" />
   </packageSources>
   <config>
     <add key="repositoryPath" value="packages" />
