move local nuget source to wasm

--- a/tests/src/Simple/HelloWasm/NuGet.config
+++ b/tests/src/Simple/HelloWasm/NuGet.config
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear/>
+    <clear />
+    <add key="Package source" value="D:\GitHub\LLVMSharp\src\bin\Release\netstandard2.0\publish" />
     <add key="dotnetfeed dotnet-core" value="https://dotnetfeed.blob.core.windows.net/dotnet-core/index.json" />
     <add key="dotnetfeed dotnet-coreclr" value="https://dotnetfeed.blob.core.windows.net/dotnet-coreclr/index.json" />
     <add key="myget.org dotnet-buildtools" value="https://dotnet.myget.org/F/dotnet-buildtools/api/v3/index.json" />
